--- a/pom.xml
+++ b/pom.xml
@@ -161,6 +161,23 @@
 		</pluginManagement>
     </build>
     
+	<repositories>
+    	<repository>
+        	<id>jboss-public-repository-group</id>
+          	<name>JBoss Public Maven Repository Group</name>
+          	<url>http://repository.jboss.org/nexus/content/groups/public-jboss/</url>
+          	<layout>default</layout>
+          	<releases>
+            	<enabled>true</enabled>
+            	<updatePolicy>never</updatePolicy>
+          	</releases>
+          	<snapshots>
+            	<enabled>true</enabled>
+            	<updatePolicy>never</updatePolicy>
+          	</snapshots>
+        </repository>
+	</repositories>
+    
 
     
     <profiles>
