created Corvus plugins parent pom

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <modules>
     	<module>Commons</module>
     	<module>Corvus</module>
+    	<module>Plugins</module>
     </modules>
     
     <dependencies>
