import Corvus.Main.Admin plugin into new plugin structure

--- a/Plugins/pom.xml
+++ b/Plugins/pom.xml
@@ -17,6 +17,7 @@
     
     <modules>
     	<module>Corvus.Main</module>
+    	<module>Corvus.Main.Admin</module>    	
     </modules>
     
     <dependencyManagement>
