--- a/Plugins/Corvus.Admin/pom.xml
+++ b/Plugins/Corvus.Admin/pom.xml
@@ -2,40 +2,40 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>hk.hku.cecid.piazza</groupId>
-        <artifactId>piazza-parent</artifactId>
+        <groupId>hk.hku.cecid.piazza.plugins</groupId>
+        <artifactId>piazza-plugins-parent</artifactId>
         <version>2.0.20100331-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>piazza-corvus</artifactId>
-    <packaging>jar</packaging>
+    <artifactId>piazza-corvus-admin</artifactId>
 
-    <name>Piazza: Corvus</name>
-    <description>Piazza Corvus</description>
+    <name>Plugins: Corvus Admin</name>
+    <description>Piazza Plugin Corvus Admin</description>
     
     <dependencies>
     
     	<dependency>
     		<groupId>hk.hku.cecid.piazza</groupId>
     		<artifactId>piazza-commons</artifactId>
-    		<version>${project.version}</version>
     	</dependency>
+
+		<dependency>
+			<groupId>hk.hku.cecid.piazza</groupId>
+			<artifactId>piazza-corvus</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>hk.hku.cecid.piazza.plugins</groupId>
+			<artifactId>piazza-corvus-main</artifactId>
+		</dependency>
     
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
+            <scope>provided</scope>
         </dependency>
     
-		<dependency>
-			<groupId>jboss</groupId>
-		    <artifactId>jboss-j2ee</artifactId>
-		</dependency>
-    
     </dependencies>
-    
-    <build>
-    	<finalName>${artifactId}</finalName>
-    </build>
     
 </project>
