--- a/Plugins/pom.xml
+++ b/Plugins/pom.xml
@@ -16,8 +16,9 @@
     <description>Piazza Plugins Parent</description>
     
     <modules>
+ 		<module>Corvus.Admin</module>
     	<module>Corvus.Main</module>
-    	<module>Corvus.Main.Admin</module>    	
+    	<module>Corvus.Main.Admin</module>
     </modules>
     
     <dependencyManagement>
@@ -26,6 +27,24 @@
 			<dependency>
 				<groupId>hk.hku.cecid.piazza</groupId>
 				<artifactId>piazza-commons</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>hk.hku.cecid.piazza</groupId>
+				<artifactId>piazza-corvus</artifactId>
+				<version>${project.version}</version>
+			</dependency>			
+			
+			<dependency>
+				<groupId>hk.hku.cecid.piazza.plugins</groupId>
+				<artifactId>piazza-corvus-main</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>hk.hku.cecid.piazza.plugins</groupId>
+				<artifactId>piazza-corvus-main-admin</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 
