moved CommonsTest and CommonExt into seperate modules

--- a/Ext/CommonsExt/pom.xml
+++ b/Ext/CommonsExt/pom.xml
@@ -2,8 +2,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>hk.hku.cecid.piazza</groupId>
-        <artifactId>piazza-parent</artifactId>
+        <groupId>hk.hku.cecid.piazza.ext</groupId>
+        <artifactId>piazza-ext-parent</artifactId>
         <version>2.0.20100331-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
@@ -11,15 +11,14 @@
     <artifactId>piazza-commons-ext</artifactId>
     <packaging>pom</packaging>
 
-    <name>Piazza: Commons Extensions</name>
-    <description>Piazza Common Extensions Library</description>
+    <name>Ext: Commons Extensions</name>
+    <description>Piazza Ext Common Extensions Library</description>
     
     <dependencies>
     
     	<dependency>
     		<groupId>hk.hku.cecid.piazza</groupId>
     		<artifactId>piazza-commons</artifactId>
-    		<version>${project.version}</version>
     	</dependency>
     
     </dependencies>
