--- a/Plugins/CorvusAS2Plus.Admin/pom.xml
+++ b/Plugins/CorvusAS2Plus.Admin/pom.xml
@@ -16,7 +16,7 @@
     <dependencies>
     
     	<dependency>
-    		<groupId>hk.hku.cecid.piazza</groupId>
+    		<groupId>hk.hku.cecid.piazza.ext</groupId>
     		<artifactId>piazza-commons-test</artifactId>
     		<scope>test</scope>
     		<exclusions>
