--- a/Plugins/pom.xml
+++ b/Plugins/pom.xml
@@ -31,7 +31,7 @@
         <dependencies>
 
 			<dependency>
-				<groupId>hk.hku.cecid.piazza</groupId>
+				<groupId>hk.hku.cecid.piazza.ext</groupId>
 				<artifactId>piazza-commons-test</artifactId>
 				<version>${project.version}</version>
 			</dependency>
