moved ebxml-pkg to Ext module

--- a/Ext/pom.xml
+++ b/Ext/pom.xml
@@ -16,6 +16,7 @@
     <description>Piazza Ext Parent</description>
     
     <modules>
+    	<module>ebxml-pkg</module>
  		<module>CommonsExt</module>
  		<module>CommonsTest</module>
     </modules>
