--- a/Ext/ebxml-pkg/pom.xml
+++ b/Ext/ebxml-pkg/pom.xml
@@ -2,16 +2,16 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>hk.hku.cecid.piazza</groupId>
-        <artifactId>piazza-parent</artifactId>
+        <groupId>hk.hku.cecid.piazza.ext</groupId>
+        <artifactId>piazza-ext-parent</artifactId>
         <version>2.0.20100331-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>ebxml-pkg</artifactId>
 
-    <name>Piazza: EbXML</name>
-    <description>Piazza EbXML Library</description>
+    <name>Ext: EbXML</name>
+    <description>Piazza Ext EbXML Library</description>
     
     
     <dependencies>
