--- a/Plugins/pom.xml
+++ b/Plugins/pom.xml
@@ -43,7 +43,7 @@
 			</dependency>
 			
 			<dependency>
-				<groupId>hk.hku.cecid.piazza</groupId>
+				<groupId>hk.hku.cecid.piazza.ext</groupId>
 				<artifactId>ebxml-pkg</artifactId>
 				<version>${project.version}</version>
 			</dependency>
