--- a/Core/pom.xml
+++ b/Core/pom.xml
@@ -53,6 +53,24 @@
 			    <version>4.2.2.GA</version>
 			</dependency>
 			
+			<dependency>
+				<groupId>jaxen</groupId>
+				<artifactId>jaxen</artifactId>
+				<version>1.1.1</version>
+			</dependency>
+
+			<dependency>
+				<groupId>commons-logging</groupId>
+				<artifactId>commons-logging</artifactId>
+				<version>1.1</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>commons-collections</groupId>
+				<artifactId>commons-collections</artifactId>
+				<version>3.2.1</version>
+			</dependency>
+			
         </dependencies>
     </dependencyManagement>    
     
