--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
     	<module>Core</module>
     	<module>Plugins</module>
     	<module>Clients</module>
+		<module>Dist</module>
     </modules>
     
     <dependencies>
@@ -90,6 +91,12 @@
 			</dependency>
 			
 			<dependency>
+				<groupId>commons-pool</groupId>
+				<artifactId>commons-pool</artifactId>
+				<version>1.4</version>
+			</dependency>
+			
+			<dependency>
 				<groupId>commons-fileupload</groupId>
 				<artifactId>commons-fileupload</artifactId>
 				<version>1.0</version>
@@ -105,7 +112,7 @@
 				<groupId>commons-codec</groupId>
 				<artifactId>commons-codec</artifactId>
 				<version>1.3</version>
-			</dependency>	
+			</dependency>
 			
 			<dependency>
 				<groupId>dom4j</groupId>
@@ -135,6 +142,12 @@
 				<groupId>com.oracle</groupId>
 				<artifactId>ojdbc14</artifactId>
 				<version>10.2.0.3.0</version>
+			</dependency>
+			
+			<dependency>
+			    <groupId>postgresql</groupId>
+			    <artifactId>postgresql</artifactId>
+			    <version>9.0-801.jdbc4</version>
 			</dependency>
             
         </dependencies>
@@ -190,6 +203,10 @@
 					<artifactId>maven-antrun-plugin</artifactId>
 					<version>1.6</version>
 				</plugin>
+				<plugin>
+					<artifactId>maven-assembly-plugin</artifactId>
+					<version>2.2.1</version>
+				</plugin>
 			</plugins>
 		</pluginManagement>
     </build>
@@ -211,12 +228,21 @@
         </repository>
 	</repositories>
     
-
-    
     <profiles>
         <!-- =============================== -->
         <!-- Profiles                        -->
         <!-- =============================== -->
+        
+    	<profile>
+    		<id>tomcat</id>
+    		<activation>
+    			<activeByDefault>true</activeByDefault>
+    		</activation>
+    		<properties>
+    			<distribution>tomcat</distribution>
+    		</properties>
+    	</profile>
+    	
     </profiles>
     
 </project>
