--- a/Clients/pom.xml
+++ b/Clients/pom.xml
@@ -29,13 +29,13 @@
 			</dependency>
 
 			<dependency>
-				<groupId>hk.hku.cecid.piazza</groupId>
+				<groupId>hk.hku.cecid.piazza.ext</groupId>
 				<artifactId>piazza-commons-test</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			
 			<dependency>
-				<groupId>hk.hku.cecid.piazza</groupId>
+				<groupId>hk.hku.cecid.piazza.ext</groupId>
 				<artifactId>piazza-commons-ext</artifactId>
 				<version>${project.version}</version>
 			</dependency>
