added more missing files which were getting excluded by .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,7 @@
-*~
-*swp
 target/
-.idea/
-*.data
-*.metadata
 *.classpath
 *.project
 *.settings
 *.class
-target-eclipse
-**bin
-java-sources
-pom.xml.*
-*.object
+target-eclipse/
 .DS_Store
-*.save
-*.log.*
-*.orig
-*.tmproj
