--- a/Core/pom.xml
+++ b/Core/pom.xml
@@ -58,6 +58,12 @@
 				<artifactId>jaxen</artifactId>
 				<version>1.1.1</version>
 			</dependency>
+			
+			<dependency>
+				<groupId>xalan</groupId>
+				<artifactId>xalan</artifactId>
+				<version>2.7.1</version>
+			</dependency>			
 
 			<dependency>
 				<groupId>commons-logging</groupId>
