--- a/Ext/CommonsTest/pom.xml
+++ b/Ext/CommonsTest/pom.xml
@@ -16,13 +16,33 @@
     <dependencies>
     
     	<dependency>
+    		<groupId>junit</groupId>
+    		<artifactId>junit</artifactId>
+    	</dependency>    
+    
+    	<dependency>
     		<groupId>hk.hku.cecid.piazza</groupId>
     		<artifactId>piazza-commons</artifactId>
     	</dependency>
     	
     	<dependency>
+    		<groupId>hk.hku.cecid.piazza.core</groupId>
+    		<artifactId>piazza-corvus-core</artifactId>
+    	</dependency>
+    	
+    	<dependency>
     		<groupId>hk.hku.cecid.piazza.plugins</groupId>
     		<artifactId>piazza-corvus-as2</artifactId>
+    	</dependency>
+    	
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+		</dependency>
+    	
+    	<dependency>
+    		<groupId>jaxen</groupId>
+    		<artifactId>jaxen</artifactId>
     	</dependency>
     
     </dependencies>
