--- a/Ext/pom.xml
+++ b/Ext/pom.xml
@@ -36,6 +36,12 @@
 				<version>${project.version}</version>
 			</dependency>
 
+			<dependency>
+				<groupId>hk.hku.cecid.piazza.core</groupId>
+				<artifactId>piazza-corvus-core</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+
         </dependencies>
     </dependencyManagement>    
     
