1. add support to plugin classloader to load all jar from a given directory 2. updated distribution to include required dependencies and put them in a lib dir for the plugin (currently only core,jms,ebms) 3. added extension-point in ebms for JMS support currently doesn't no much 4. tweak maven dependency management to correctly scope dependencies

--- a/Plugins/Corvus.Main.Admin/pom.xml
+++ b/Plugins/Corvus.Main.Admin/pom.xml
@@ -19,6 +19,11 @@
     		<groupId>hk.hku.cecid.piazza</groupId>
     		<artifactId>piazza-commons</artifactId>
     	</dependency>
+    	
+		<dependency>
+			<groupId>hk.hku.cecid.piazza.core</groupId>
+			<artifactId>piazza-corvus-core</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>hk.hku.cecid.piazza.plugins</groupId>
