--- a/Plugins/CorvusEbMS.Admin/src/main/resources/hk.hku.cecid.ebms.admin/plugin.xml
+++ b/Plugins/CorvusEbMS.Admin/src/main/resources/hk.hku.cecid.ebms.admin/plugin.xml
@@ -5,10 +5,10 @@
    provider-name="hk.hku.cecid">
 
 	<runtime>
-		<library name="commons-fileupload-1.0.jar"/>
 		<library name="corvus-ebms-admin.jar"/>
 		<library name="conf/"/>
 		<library name="graphics/"/>
+		<library name="lib/"/>
 	</runtime>
 
 	<requires>
