--- a/Plugins/CorvusEbMS.Admin/pom.xml
+++ b/Plugins/CorvusEbMS.Admin/pom.xml
@@ -16,6 +16,11 @@
     <dependencies>
     
 		<dependency>
+			<groupId>hk.hku.cecid.piazza</groupId>
+			<artifactId>piazza-commons</artifactId>
+		</dependency>
+    
+		<dependency>
 			<groupId>hk.hku.cecid.piazza.plugins</groupId>
 			<artifactId>piazza-corvus-ebms</artifactId>
 		</dependency>
