--- a/Plugins/CorvusEbMS/src/main/resources/hk.hku.cecid.ebms/plugin.xml
+++ b/Plugins/CorvusEbMS/src/main/resources/hk.hku.cecid.ebms/plugin.xml
@@ -16,11 +16,8 @@
 	
 	<runtime>
 		<library name="corvus-ebms-core.jar"/>
-		<library name="ebxml-pkg-2.0.20100331-SNAPSHOT.jar"/>
 		<library name="conf/"/>
-		<library name="activemq-core-5.4.2.jar/"/>
-		<library name="activemq-all-5.4.2.jar/"/>
-		<library name="jms-1.1.jar/"/>
+		<library name="lib/"/>
 	</runtime>
 
 	<extension point="hk.hku.cecid.piazza.corvus.core.httpd.listener" name="Ebms Plugin Inbound Listener">
@@ -61,6 +58,11 @@
 	<extension point="hk.hku.cecid.piazza.corvus.core.httpd.listener" name="Ebms Permit Redownload Service">
 	  <parameter name="class" value="hk.hku.cecid.ebms.spa.service.EbmsPermitRedownloadService" />
 	  <parameter name="context" value="/ebms/permitdl" />
+	</extension>
+	
+	<extension point="org.jentrata.jms.sender" name="Ebms JMS Outbound Message Handler">
+	  <parameter name="class" value="hk.hku.cecid.ebms.spa.handler.jms.EbmsMessageHandler" />
+	  <parameter name="queue" value="jms:queue:Ebms.Outbound" />
 	</extension>
 	
 </plugin>
