Ebms JMS message handler now correctly creates an ebxml messages and sends it to the MSH to be delivered

--- a/Plugins/CorvusEbMS/src/main/resources/hk.hku.cecid.ebms/plugin.xml
+++ b/Plugins/CorvusEbMS/src/main/resources/hk.hku.cecid.ebms/plugin.xml
@@ -64,12 +64,15 @@
 	<extension point="org.jentrata.jms.sender" name="Ebms JMS Outbound Message Handler">
 		<parameter name="class" value="hk.hku.cecid.ebms.spa.handler.jms.EbmsMessageHandler" />
 		<parameter name="queue" value="jms:queue:Ebms.Outbound" />
-		<parameter name="conversationId" value="TEST_CPA_ID"/>
-		<parameter name="fromPartyId" value="TEST_A"/>
-		<parameter name="fromPartyType" value=""/>
-		<parameter name="toPartyId" value="TEST_B"/>
-		<parameter name="toPartyType" value=""/>
-		<parameter name="serviceType" value="TEST_A_TO_TEST_B"/>
+		<parameter name="cpaId" value="cpaid"/>
+		<parameter name="service" value="http://localhost:8080/corvus/httpd/ebms/inbound"/>
+		<parameter name="serviceType" value=""/>
+		<parameter name="action" value="action"/>
+		<parameter name="conversationId" value="test_conversationId"/>
+		<parameter name="fromPartyId" value="test_a"/>
+		<parameter name="fromPartyType" value="ParticipantID"/>
+		<parameter name="toPartyId" value="test_b"/>
+		<parameter name="toPartyType" value="ParticipantID"/>
 	</extension>
 	
 </plugin>
