--- a/Plugins/CorvusEbMS.Admin/pom.xml
+++ b/Plugins/CorvusEbMS.Admin/pom.xml
@@ -34,6 +34,11 @@
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+		</dependency>
     
         <dependency>
             <groupId>javax.servlet</groupId>
