--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,12 @@
 				<artifactId>commons-fileupload</artifactId>
 				<version>1.2</version>
 			</dependency>
+			
+			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>1.4</version>
+			</dependency>
 
 			<dependency>
 				<groupId>commons-httpclient</groupId>
