--- a/Plugins/pom.xml
+++ b/Plugins/pom.xml
@@ -163,6 +163,13 @@
     <build>
     	<resources>
     		<resource>
+    			<directory>src/main/java</directory>
+    			<filtering>true</filtering>
+				<includes>
+					<include>**/*.wsdl</include>
+				</includes>
+    		</resource>    	
+    		<resource>
     			<directory>src/main/resources</directory>
     			<targetPath>plugins</targetPath>
     			<filtering>true</filtering>
